[package]
name = "catc"
version = "0.1.0"
authors = ["John Flanigan <johnrflanigan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ron = "*"
lalrpop-util = "*"
regex="*"
clap="*"

[build-dependencies]
lalrpop = { version = "*", features = [ "lexer" ] }
